# ID_01

./: .gitignore  .gitignore~  CMakeLists.txt  Doxyfile  build_and_run.sh  fdsf  main.cpp  memo.odp  readme.md  run.sh
base/PartsBasedDetector-master-build/: CMakeCache.txt  Makefile  PartsBasedDetector.cbp  cmake_install.cmake
base/PartsBasedDetector-master-build/src/: Makefile  PartsBasedDetector  cmake_install.cmake
base/PartsBasedDetector-master/Untitled Folder/: CMakeCache.txt  cmake_install.cmake
base/PartsBasedDetector-master/Untitled Folder/src/: PartsBasedDetector
base/PartsBasedDetector-master/doc/: Doxyfile  index.html
base/PartsBasedDetector-master/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
doc/: Doxyfile  index.html
doc/html/: Candidate_8hpp.html  Candidate_8hpp_source.html  DepthConsistency_8cpp.html  DepthConsistency_8hpp.html  DepthConsistency_8hpp_source.html  DistanceTransform_8hpp.html  DistanceTransform_8hpp_source.html  DynamicProgram_8cpp.html  DynamicProgram_8hpp.html  DynamicProgram_8hpp_source.html  FileStorageModel_8cpp.html  FileStorageModel_8hpp.html  FileStorageModel_8hpp_source.html  FourierConvolutionEngine_8cpp.html  FourierConvolutionEngine_8hpp.html  FourierConvolutionEngine_8hpp_source.html  HOGFeatures_8cpp.html  HOGFeatures_8hpp.html  HOGFeatures_8hpp_source.html  IConvolutionEngine_8hpp.html  IConvolutionEngine_8hpp_source.html  IFeatures_8hpp.html  IFeatures_8hpp_source.html  Math_8hpp.html  Math_8hpp_source.html  MatlabIOModel_8cpp.html  MatlabIOModel_8hpp.html  MatlabIOModel_8hpp_source.html  Metrics_8hpp.html  Metrics_8hpp_source.html  ModelTransfer_8cpp.html  Model_8hpp.html  Model_8hpp_source.html  PartsBasedDetector_8cpp.html  PartsBasedDetector_8hpp.html  PartsBasedDetector_8hpp_source.html  Parts_8hpp.html  Parts_8hpp_source.html  PointCloudClusterer_8h.html  PointCloudClusterer_8h_source.html  (+82 more)
doc/html/search/: all_61.js  all_62.js  all_68.js  all_6d.js  all_6f.js  all_72.js  all_73.js  all_76.js  all_77.js  all_78.js  all_79.js  all_7e.js  classes_63.js  classes_66.js  classes_70.js  classes_71.js  classes_72.js  classes_76.js  files_66.js  files_68.js  files_6d.js  files_70.js  files_76.js  functions_61.js  functions_64.js  functions_69.js  functions_6e.js  functions_70.js  functions_72.js  functions_74.js  functions_76.js  functions_78.js  search.js  typedefs_70.js  variables_61.js  variables_66.js  variables_69.js  variables_6e.js  variables_73.js  variables_78.js  (+2 more)
doc/latex/: Candidate_8hpp.tex  DepthConsistency_8cpp.tex  DepthConsistency_8hpp.tex  DistanceTransform_8hpp.tex  DynamicProgram_8cpp.tex  DynamicProgram_8hpp.tex  FileStorageModel_8cpp.tex  FileStorageModel_8hpp.tex  FourierConvolutionEngine_8cpp.tex  FourierConvolutionEngine_8hpp.tex  HOGFeatures_8cpp.tex  HOGFeatures_8hpp.tex  IConvolutionEngine_8hpp.tex  IFeatures_8hpp.tex  Math_8hpp.tex  MatlabIOModel_8cpp.tex  MatlabIOModel_8hpp.tex  Metrics_8hpp.tex  ModelTransfer_8cpp.tex  Model_8hpp.tex  PartsBasedDetector_8cpp.tex  PartsBasedDetector_8hpp.tex  Parts_8hpp.tex  PointCloudClusterer_8h.tex  PointCloudClusterer_8hpp.tex  Rect3_8hpp.tex  SearchSpacePruning_8cpp.tex  SearchSpacePruning_8hpp.tex  SpatialConvolutionEngine_8cpp.tex  SpatialConvolutionEngine_8hpp.tex  StereoCameraModel_8cpp.tex  StereoCameraModel_8hpp.tex  Visualize_8cpp.tex  Visualize_8hpp.tex  annotated.tex  classCandidate.tex  classComponentPart.tex  classDepthConsistency.tex  classDistanceTransform.tex  classDynamicProgram.tex  (+34 more)
html/: group__example.html  index.html  modules.html
include/: Visualize.hpp
latex/: doxygen.sty  group__example.tex  refman.tex
learn_from_pitches_sparse_coding/: Coding.py  Coding.py.bak  Coding.py.bak.bak  Coding.py~.bak  Coding.py~.bak.bak  DevideFeaturetoTrainandTest.py  DictionaryLearning.py  DictionaryLearning.py.bak  DrawSkeleton.py  ExtractFeatureFromCropImage.py  ExtractFeatureFromCropImage.py.bak  SaveCropImage.py  SaveCropImage.py.bak  SaveCropImage_neg.py  ShowDictionary.py  feature.txt  feature_test.txt  feature_train.txt  patchlist.txt  readme.md  rf.py  rf.py.bak  train.npy  train.py  train.py.bak
learn_from_pitches_sparse_coding/100 filters/: Dictionaries(mini_16_16_500).npy  Dictionaries(mini_8_8_1000).npy  Dictionaries(mini_8_8_2000).npy  Dictionaries(mini_8_8_500).npy  Dictionaries(mini_8_8_6_6_100000).npy
learn_from_pitches_sparse_coding/324 filters/: Dictionaries(mini_8_8_100000).npy  Dictionaries(mini_8_8_50000).npy  Dictionaries(mini_8_8_6x6_100000).npy
learn_from_pitches_sparse_coding/RBM/: SaveGrayFeatretoSVMlightFormat.py  rbm.py
learn_from_pitches_sparse_coding/imgs/: annotation.txt
src/: DepthConsistency.cpp  DynamicProgram.cpp  FileStorageModel.cpp  FourierConvolutionEngine.cpp  HOGFeatures.cpp  PartsBasedDetector.cpp  SearchSpacePruning.cpp  SpatialConvolutionEngine.cpp  StereoCameraModel.cpp  Visualize.cpp  demo.cpp  demo.cpp.autosave  main.cpp  nms.cpp
(+232 files in other folders)
